Very minor: autoboxing in tests and toString() on array instances