@@ -68,8 +68,8 @@ public class BuiltInTypeTest extends OgmTestCase {
 		b.setSiteWeight( weight );
 		BigInteger visitCount = new BigInteger( "444" );
 		b.setVisitCount( visitCount );
-		b.setFavourite( true );
-		Byte displayMask = new Byte( (byte) '8' );
+		b.setFavourite( Boolean.TRUE );
+		Byte displayMask = Byte.valueOf( (byte) '8' );
 		b.setDisplayMask( displayMask );
 		Date now = new Date( System.currentTimeMillis() );
 		b.setCreationDate( now );
@@ -104,7 +104,7 @@ public class BuiltInTypeTest extends OgmTestCase {
 		assertEquals( "http://www.hibernate.org/", b.getUrl().toString() );
 		assertEquals( weight, b.getSiteWeight() );
 		assertEquals( visitCount, b.getVisitCount() );
-		assertEquals( new Boolean( true ), b.isFavourite() );
+		assertEquals( Boolean.TRUE, b.isFavourite() );
 		assertEquals( displayMask, b.getDisplayMask() );
 		assertEquals( "serial number incorrect", serialNumber, b.getSerialNumber() );
 		assertEquals( "user id incorrect", userId, b.getUserId() );
